src/lexer/opam_lexis.c
/* Generated by re2c 3.1 on Thu Aug 17 18:52:47 2023 */
#line 1 "src/lexer/opam_lexis.re"
// opam lexer
// re2c $INPUT -o $OUTPUT -i

/* NB: constants for terminals generated from opam_parser.y.
   makeheaders arranges so that any needed here are included in
   opam_lexis.h. Isn't that sweet?
 */

#include <assert.h>
#include <errno.h>
#ifdef __linux__
#include <linux/limits.h>
#else
#include <limits.h>
#endif
#include <stdio.h>
#include <stdlib.h>
#include <string.h>
#include <unistd.h>

#include <sys/errno.h>

#include "log.h"
#include "opam_lexis.h"

#if EXPORT_INTERFACE
#define BUFSIZE 1024
#ifndef MAX_DEPS
#define MAX_DEPS 64
#endif
#endif

const char *deps[MAX_DEPS];
int opam_curr_tag = 0;

/* enable start conditions */
#line 40 "bazel-out/darwin_arm64-fastbuild/bin/src/lexer/opam_lexis.c"
enum YYCONDTYPE {
	yyc0,
	yycinit,
	yycbuild,
	yycbuildlist,
	yycterm,
	yycterm_filter,
	yyctermlist_filter,
	yycdepends,
	yycfpf,
	yycfvf,
	yyctriplequote
};
#line 37 "src/lexer/opam_lexis.re"


#if EXPORT_INTERFACE
#include <stdbool.h>
union opam_token_u {
    char c;
    int i;
    char *s;
    bool boolval;
};

struct opam_lexer_s
{
    const char *filename;
    const char *tok;
    const char *cursor;
    const char *limit;
    const char *marker;
    int mode;                   /* i.e. start condition */
};

#endif


EXPORT void opam_lexer_init(const char*filename,
                     struct opam_lexer_s *lexer,
                     const char *input)
{
    lexer->filename = filename;
    lexer->cursor = input;
}

EXPORT void opam_lexer_free(opam_lexer_s *lexer)
{
    /* log_debug("lexer_free: %s", lexer->fname); */
    /* utarray_free(lexer->indent_kws); */
}

/* static void mtag(const char *t) */
// static void mtag(int t)
// {
//     /* fprintf(stderr, "mtag ctor idx: %d, s: %.22s\n", opam_curr_tag, t); */
//     /* deps[opam_curr_tag++] = t; */
// }


/* static void print_tags() { */
/*     /\* fprintf(stderr, "printing %d tags:\n", opam_curr_tag/2); *\/ */
/*     for (int i=0; i < opam_curr_tag/2 ; i++) { */
/*         fprintf(stderr, "\tVALTOK: '%*s'\n", (int)(deps[i*2+1] - deps[i*2]), deps[i*2]); */
/*     } */
/*     /\* fprintf(stderr, "done\n"); *\/ */
/* } */

#define YYMTAGP(t) mtag(YYCURSOR)
#define YYMTAGN(t) mtag(NULL)

EXPORT int get_next_opam_token(struct opam_lexer_s *lexer, union opam_token_u *otok)
{
#if defined(LEXDEBUG_FVF)
    log_debug("yycinit: %d, yycdepends: %d, yycfpf %d, yycfvf: %d",
              yycinit, yycdepends, yycfpf, yycfvf);
    // only set lexer->mode on initial call
    static bool start = true;
    if (start) {
        lexer->mode = yycfpf;
        log_debug("start mode: %d", lexer->mode);
        start = false;
    }
#elif defined (LEXDEBUG_FPF)
    log_debug("yycinit: %d, yycdepends: %d, yycfpf %d, yycfvf: %d",
              yycinit, yycdepends, yycfpf, yycfvf);
    static bool start = true;
    if (start) {
        lexer->mode = yycfpf;
        log_debug("start mode: %d", lexer->mode);
        start = false;
    }
#elif defined (LEXDEBUG_FILTERS)
    log_debug("yycinit: %d, yycdepends: %d, yycfpf %d, yycfvf: %d",
              yycinit, yycdepends, yycfpf, yycfvf);
    static bool start = true;
    if (start) {
        lexer->mode = yycfvf;
        log_debug("start mode: %d", lexer->mode);
        start = false;
    }
#else
    /* static bool start = true; */
    /* if (start) { */
    /*     lexer->mode = yycinit; */
    /*     log_debug("start mode: %d", lexer->mode); */
    /*     start = false; */
    /* } */
#endif

    /* stags */
    const char *s1, *s2;        /* dq strings */
    /* const char *pkg1, *pkg2; */
    /* const char *pred1, *pred2; */
    /* const char *txt1, *txt2; */

    /* mtags */
    /* int f1, f2; */                 /* flags */
    /* int dep1, dep2; */
    /* const char *vtok1, *vtok2; */

    /* int h1, h2; */
    
#line 164 "bazel-out/darwin_arm64-fastbuild/bin/src/lexer/opam_lexis.c"
const char *yyt1;const char *yyt2;
#line 145 "src/lexer/opam_lexis.re"

    
#line 169 "bazel-out/darwin_arm64-fastbuild/bin/src/lexer/opam_lexis.c"
#line 146 "src/lexer/opam_lexis.re"

loop:
    opam_curr_tag = 0;
    lexer->tok = lexer->cursor;
    
#line 176 "bazel-out/darwin_arm64-fastbuild/bin/src/lexer/opam_lexis.c"
#line 150 "src/lexer/opam_lexis.re"

    
#line 180 "bazel-out/darwin_arm64-fastbuild/bin/src/lexer/opam_lexis.c"
{
	char yych;
	unsigned int yyaccept = 0;
	switch (lexer->mode) {
		case yyc0: goto yyc_0;
		case yycinit: goto yyc_init;
		case yycbuild: goto yyc_build;
		case yycbuildlist: goto yyc_buildlist;
		case yycterm: goto yyc_term;
		case yycterm_filter: goto yyc_term_filter;
		case yyctermlist_filter: goto yyc_termlist_filter;
		case yycdepends: goto yyc_depends;
		case yycfpf: goto yyc_fpf;
		case yycfvf: goto yyc_fvf;
		case yyctriplequote: goto yyc_triplequote;
	}
/* *********************************** */
yyc_0:
#line 200 "src/lexer/opam_lexis.re"
	{
            /* printf("yycinit: %d, yycdepends: %d, yycfvf: %d\n", */
            /*        yycinit, yycdepends, yycfvf); */
            /* lexer->mode = yycdepends; */
        }
#line 205 "bazel-out/darwin_arm64-fastbuild/bin/src/lexer/opam_lexis.c"
/* *********************************** */
yyc_init:
	yych = *lexer->cursor;
	switch (yych) {
		case 0x00: goto yy2;
		case '\t':
		case '\n':
		case ' ': goto yy5;
		case '!':
			yyt1 = lexer->cursor;
			goto yy7;
		case '"': goto yy9;
		case '#': goto yy10;
		case '&':
		case '|': goto yy11;
		case '(': goto yy12;
		case ')': goto yy14;
		case ',': goto yy15;
		case '-':
		case '0':
		case '1':
		case '2':
		case '3':
		case '4':
		case '5':
		case '6':
		case '7':
		case '8':
		case '9':
		case '_':
			yyt1 = lexer->cursor;
			goto yy16;
		case ':': goto yy17;
		case '<':
		case '>':
			yyt1 = lexer->cursor;
			goto yy18;
		case '=': goto yy20;
		case '?': goto yy21;
		case 'A':
		case 'B':
		case 'C':
		case 'D':
		case 'E':
		case 'F':
		case 'G':
		case 'H':
		case 'I':
		case 'J':
		case 'K':
		case 'L':
		case 'M':
		case 'N':
		case 'O':
		case 'P':
		case 'Q':
		case 'R':
		case 'S':
		case 'T':
		case 'U':
		case 'V':
		case 'W':
		case 'X':
		case 'Y':
		case 'Z':
		case 'e':
		case 'f':
		case 'g':
		case 'j':
		case 'k':
		case 'q':
		case 'u':
		case 'w':
		case 'x':
		case 'y':
		case 'z':
			yyt1 = lexer->cursor;
			goto yy22;
		case '[': goto yy25;
		case ']': goto yy26;
		case 'a':
			yyt1 = lexer->cursor;
			goto yy27;
		case 'b':
			yyt1 = lexer->cursor;
			goto yy28;
		case 'c':
			yyt1 = lexer->cursor;
			goto yy29;
		case 'd':
			yyt1 = lexer->cursor;
			goto yy30;
		case 'h':
			yyt1 = lexer->cursor;
			goto yy31;
		case 'i':
			yyt1 = lexer->cursor;
			goto yy32;
		case 'l':
			yyt1 = lexer->cursor;
			goto yy33;
		case 'm':
			yyt1 = lexer->cursor;
			goto yy34;
		case 'n':
			yyt1 = lexer->cursor;
			goto yy35;
		case 'o':
			yyt1 = lexer->cursor;
			goto yy36;
		case 'p':
			yyt1 = lexer->cursor;
			goto yy37;
		case 'r':
			yyt1 = lexer->cursor;
			goto yy38;
		case 's':
			yyt1 = lexer->cursor;
			goto yy39;
		case 't':
			yyt1 = lexer->cursor;
			goto yy40;
		case 'v':
			yyt1 = lexer->cursor;
			goto yy41;
		case '{': goto yy42;
		case '}': goto yy43;
		default: goto yy3;
	}
yy2:
	++lexer->cursor;
#line 420 "src/lexer/opam_lexis.re"
	{
            log_debug("lexing completed");
            return 0;
        }
#line 342 "bazel-out/darwin_arm64-fastbuild/bin/src/lexer/opam_lexis.c"
yy3:
	++lexer->cursor;
yy4:
#line 414 "src/lexer/opam_lexis.re"
	{
            fprintf(stderr, "ERROR lexing: %s: %s\n",
                    lexer->filename, lexer->tok);
            exit(-1);
        }
#line 352 "bazel-out/darwin_arm64-fastbuild/bin/src/lexer/opam_lexis.c"
yy5:
	yych = *++lexer->cursor;
	switch (yych) {
		case '\t':
		case '\n':
		case ' ': goto yy5;
		default: goto yy6;
	}
yy6:
#line 387 "src/lexer/opam_lexis.re"
	{ goto loop; }
#line 364 "bazel-out/darwin_arm64-fastbuild/bin/src/lexer/opam_lexis.c"
yy7:
	yych = *++lexer->cursor;
	switch (yych) {
		case '=': goto yy44;
		default: goto yy8;
	}
yy8:
#line 222 "src/lexer/opam_lexis.re"
	{ return BANG; }
#line 374 "bazel-out/darwin_arm64-fastbuild/bin/src/lexer/opam_lexis.c"
yy9:
	yyaccept = 0;
	yych = *(lexer->marker = ++lexer->cursor);
	switch (yych) {
		case '"': goto yy46;
		case '\\':
			yyt1 = lexer->cursor;
			goto yy48;
		default:
			yyt1 = lexer->cursor;
			goto yy45;
	}
yy10:
	yych = *++lexer->cursor;
	switch (yych) {
		case '\n': goto yy49;
		default: goto yy10;
	}
yy11:
	++lexer->cursor;
	s1 = lexer->cursor - 1;
	s2 = lexer->cursor;
#line 224 "src/lexer/opam_lexis.re"
	{
            otok->s = strndup(s1, (size_t)(s2-s1));
            return LOGOP;
        }
#line 402 "bazel-out/darwin_arm64-fastbuild/bin/src/lexer/opam_lexis.c"
yy12:
	yyaccept = 1;
	yych = *(lexer->marker = ++lexer->cursor);
	switch (yych) {
		case '*': goto yy50;
		default: goto yy13;
	}
yy13:
#line 207 "src/lexer/opam_lexis.re"
	{ return LPAREN; }
#line 413 "bazel-out/darwin_arm64-fastbuild/bin/src/lexer/opam_lexis.c"
yy14:
	++lexer->cursor;
#line 208 "src/lexer/opam_lexis.re"
	{ return RPAREN; }
#line 418 "bazel-out/darwin_arm64-fastbuild/bin/src/lexer/opam_lexis.c"
yy15:
	++lexer->cursor;
#line 215 "src/lexer/opam_lexis.re"
	{ return COMMA; }
#line 423 "bazel-out/darwin_arm64-fastbuild/bin/src/lexer/opam_lexis.c"
yy16:
	yyaccept = 0;
	yych = *(lexer->marker = ++lexer->cursor);
	switch (yych) {
		case '-':
		case '0':
		case '1':
		case '2':
		case '3':
		case '4':
		case '5':
		case '6':
		case '7':
		case '8':
		case '9':
		case '_': goto yy51;
		case 'A':
		case 'B':
		case 'C':
		case 'D':
		case 'E':
		case 'F':
		case 'G':
		case 'H':
		case 'I':
		case 'J':
		case 'K':
		case 'L':
		case 'M':
		case 'N':
		case 'O':
		case 'P':
		case 'Q':
		case 'R':
		case 'S':
		case 'T':
		case 'U':
		case 'V':
		case 'W':
		case 'X':
		case 'Y':
		case 'Z':
		case 'a':
		case 'b':
		case 'c':
		case 'd':
		case 'e':
		case 'f':
		case 'g':
		case 'h':
		case 'i':
		case 'j':
		case 'k':
		case 'l':
		case 'm':
		case 'n':
		case 'o':
		case 'p':
		case 'q':
		case 'r':
		case 's':
		case 't':
		case 'u':
		case 'v':
		case 'w':
		case 'x':
		case 'y':
		case 'z': goto yy22;
		default: goto yy4;
	}
yy17:
	++lexer->cursor;
#line 214 "src/lexer/opam_lexis.re"
	{ return COLON; }
#line 498 "bazel-out/darwin_arm64-fastbuild/bin/src/lexer/opam_lexis.c"
yy18:
	yych = *++lexer->cursor;
	switch (yych) {
		case '=': goto yy44;
		default: goto yy19;
	}
yy19:
	s1 = yyt1;
	s2 = lexer->cursor;
#line 217 "src/lexer/opam_lexis.re"
	{
            otok->s = strndup(s1, (size_t)(s2-s1));
            log_debug("mode %d: RELOP %s", lexer->mode, otok->s);
            return RELOP;
        }
#line 514 "bazel-out/darwin_arm64-fastbuild/bin/src/lexer/opam_lexis.c"
yy20:
	++lexer->cursor;
	s1 = lexer->cursor - 1;
	s2 = lexer->cursor;
#line 406 "src/lexer/opam_lexis.re"
	{
            otok->s = strndup(s1, (size_t)(s2-s1));
            return RELOP;
        }
#line 524 "bazel-out/darwin_arm64-fastbuild/bin/src/lexer/opam_lexis.c"
yy21:
	++lexer->cursor;
#line 223 "src/lexer/opam_lexis.re"
	{ return QMARK; }
#line 529 "bazel-out/darwin_arm64-fastbuild/bin/src/lexer/opam_lexis.c"
yy22:
	yych = *++lexer->cursor;
yy23:
	switch (yych) {
		case '-':
		case '0':
		case '1':
		case '2':
		case '3':
		case '4':
		case '5':
		case '6':
		case '7':
		case '8':
		case '9':
		case 'A':
		case 'B':
		case 'C':
		case 'D':
		case 'E':
		case 'F':
		case 'G':
		case 'H':
		case 'I':
		case 'J':
		case 'K':
		case 'L':
		case 'M':
		case 'N':
		case 'O':
		case 'P':
		case 'Q':
		case 'R':
		case 'S':
		case 'T':
		case 'U':
		case 'V':
		case 'W':
		case 'X':
		case 'Y':
		case 'Z':
		case '_':
		case 'a':
		case 'b':
		case 'c':
		case 'd':
		case 'e':
		case 'f':
		case 'g':
		case 'h':
		case 'i':
		case 'j':
		case 'k':
		case 'l':
		case 'm':
		case 'n':
		case 'o':
		case 'p':
		case 'q':
		case 'r':
		case 's':
		case 't':
		case 'u':
		case 'v':
		case 'w':
		case 'x':
		case 'y':
		case 'z': goto yy22;
		default: goto yy24;
	}
yy24:
	s1 = yyt1;
	s2 = lexer->cursor;
#line 401 "src/lexer/opam_lexis.re"
	{
            otok->s = (char*) strndup(s1, (size_t)(s2 - s1));
            return VARIDENT;
        }
#line 608 "bazel-out/darwin_arm64-fastbuild/bin/src/lexer/opam_lexis.c"
yy25:
	++lexer->cursor;
#line 209 "src/lexer/opam_lexis.re"
	{ return LBRACKET; }
#line 613 "bazel-out/darwin_arm64-fastbuild/bin/src/lexer/opam_lexis.c"
yy26:
	++lexer->cursor;
#line 210 "src/lexer/opam_lexis.re"
	{ return RBRACKET; }
#line 618 "bazel-out/darwin_arm64-fastbuild/bin/src/lexer/opam_lexis.c"
yy27:
	yych = *++lexer->cursor;
	switch (yych) {
		case 'u': goto yy52;
		default: goto yy23;
	}
yy28:
	yych = *++lexer->cursor;
	switch (yych) {
		case 'u': goto yy53;
		default: goto yy23;
	}
yy29:
	yych = *++lexer->cursor;
	switch (yych) {
		case 'o': goto yy54;
		default: goto yy23;
	}
yy30:
	yych = *++lexer->cursor;
	switch (yych) {
		case 'e': goto yy55;
		case 'o': goto yy56;
		default: goto yy23;
	}
yy31:
	yych = *++lexer->cursor;
	switch (yych) {
		case 'o': goto yy57;
		default: goto yy23;
	}
yy32:
	yych = *++lexer->cursor;
	switch (yych) {
		case 'n': goto yy58;
		default: goto yy23;
	}
yy33:
	yych = *++lexer->cursor;
	switch (yych) {
		case 'i': goto yy59;
		default: goto yy23;
	}
yy34:
	yych = *++lexer->cursor;
	switch (yych) {
		case 'a': goto yy60;
		default: goto yy23;
	}
yy35:
	yych = *++lexer->cursor;
	switch (yych) {
		case 'a': goto yy61;
		default: goto yy23;
	}
yy36:
	yych = *++lexer->cursor;
	switch (yych) {
		case 'p': goto yy62;
		default: goto yy23;
	}
yy37:
	yych = *++lexer->cursor;
	switch (yych) {
		case 'a': goto yy63;
		default: goto yy23;
	}
yy38:
	yych = *++lexer->cursor;
	switch (yych) {
		case 'e': goto yy64;
		case 'u': goto yy65;
		default: goto yy23;
	}
yy39:
	yych = *++lexer->cursor;
	switch (yych) {
		case 'u': goto yy66;
		case 'y': goto yy67;
		default: goto yy23;
	}
yy40:
	yych = *++lexer->cursor;
	switch (yych) {
		case 'a': goto yy68;
		default: goto yy23;
	}
yy41:
	yych = *++lexer->cursor;
	switch (yych) {
		case 'e': goto yy69;
		default: goto yy23;
	}
yy42:
	++lexer->cursor;
#line 211 "src/lexer/opam_lexis.re"
	{ return LBRACE; }
#line 716 "bazel-out/darwin_arm64-fastbuild/bin/src/lexer/opam_lexis.c"
yy43:
	++lexer->cursor;
#line 212 "src/lexer/opam_lexis.re"
	{ return RBRACE; }
#line 721 "bazel-out/darwin_arm64-fastbuild/bin/src/lexer/opam_lexis.c"
yy44:
	++lexer->cursor;
	goto yy19;
yy45:
	yych = *++lexer->cursor;
	switch (yych) {
		case '"': goto yy70;
		case '\\': goto yy48;
		default: goto yy45;
	}
yy46:
	yych = *++lexer->cursor;
	switch (yych) {
		case '"': goto yy71;
		default: goto yy47;
	}
yy47:
	lexer->cursor = lexer->marker;
	switch (yyaccept) {
		case 0: goto yy4;
		case 1: goto yy13;
		default: goto yy96;
	}
yy48:
	yych = *++lexer->cursor;
	switch (yych) {
		case '\\': goto yy48;
		default: goto yy45;
	}
yy49:
	++lexer->cursor;
#line 389 "src/lexer/opam_lexis.re"
	{
            /* return COMMENT; */
            goto loop;          /* skip comments */
        }
#line 758 "bazel-out/darwin_arm64-fastbuild/bin/src/lexer/opam_lexis.c"
yy50:
	yych = *++lexer->cursor;
	switch (yych) {
		case '\n': goto yy47;
		case '*': goto yy72;
		default: goto yy50;
	}
yy51:
	yych = *++lexer->cursor;
	switch (yych) {
		case '-':
		case '0':
		case '1':
		case '2':
		case '3':
		case '4':
		case '5':
		case '6':
		case '7':
		case '8':
		case '9':
		case '_': goto yy51;
		case 'A':
		case 'B':
		case 'C':
		case 'D':
		case 'E':
		case 'F':
		case 'G':
		case 'H':
		case 'I':
		case 'J':
		case 'K':
		case 'L':
		case 'M':
		case 'N':
		case 'O':
		case 'P':
		case 'Q':
		case 'R':
		case 'S':
		case 'T':
		case 'U':
		case 'V':
		case 'W':
		case 'X':
		case 'Y':
		case 'Z':
		case 'a':
		case 'b':
		case 'c':
		case 'd':
		case 'e':
		case 'f':
		case 'g':
		case 'h':
		case 'i':
		case 'j':
		case 'k':
		case 'l':
		case 'm':
		case 'n':
		case 'o':
		case 'p':
		case 'q':
		case 'r':
		case 's':
		case 't':
		case 'u':
		case 'v':
		case 'w':
		case 'x':
		case 'y':
		case 'z': goto yy22;
		default: goto yy47;
	}
yy52:
	yych = *++lexer->cursor;
	switch (yych) {
		case 't': goto yy73;
		default: goto yy23;
	}
yy53:
	yych = *++lexer->cursor;
	switch (yych) {
		case 'g': goto yy74;
		case 'i': goto yy75;
		default: goto yy23;
	}
yy54:
	yych = *++lexer->cursor;
	switch (yych) {
		case 'n': goto yy76;
		default: goto yy23;
	}
yy55:
	yych = *++lexer->cursor;
	switch (yych) {
		case 'p': goto yy77;
		case 's': goto yy78;
		case 'v': goto yy79;
		default: goto yy23;
	}
yy56:
	yych = *++lexer->cursor;
